--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,7 @@
 @font-face {
     font-family: 'orientalregular';
-    src: url('./font/laoriental-webfont.woff2') format('woff2'),
-         url('./font/laoriental-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    src: url('./font/LaOriental.otf');
+
 
 }
 
@@ -12,8 +10,8 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 16px;
-    font-family: 'orientalregular';
-    letter-spacing: 4px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 body {
@@ -31,6 +29,7 @@ body {
     display: flex;
     justify-content:space-between;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 #header .logo {
@@ -39,7 +38,7 @@ body {
     font-size: 2em;
     text-decoration: none;
     font-family: 'orientalregular';
-    line
+    letter-spacing:4px;
 }
 
 #header ul {
@@ -63,12 +62,109 @@ body {
 }
 
 #header ul li a:hover {
-    background-color: rgb(231, 71, 71);
+    background-color: #b32323;
     transition: 150ms ease-in;
     color:white;
 }
 
 #header ul li a.current {
-    background: rgb(231, 71, 71);
+    background: #b32323;
+    color:white;
+}
+
+section {
+    margin-top: 100px;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none
+}
+
+section #text {
+    position:absolute;
+    color:black;
+    text-align:center;
+    font-size:6em;
+    pointer-events: none;
+    font-family:'orientalregular';
+    letter-spacing: 4px;
+    pointer-events: none;
+    z-index: 1000;
+}
+
+section img {
+    position:absolute;
+    top: 0;
+    left:0;
+    width:100%;
+    height:auto;
+    object-fit:cover;
+    pointer-events: none;
+}
+
+#backdrop {
+    z-index: -1;
+}
+
+#mountain{
+    z-index: 6;
+}
+
+#sun {
+    z-index: 5;
+}
+
+#CherryBlossom {
+    z-index: 8;
+}
+
+#leaves {
+    z-index: 25;
+}
+
+#gate {
+    z-index: 9;
+}
+
+
+#btn {
+    text-decoration: none;
+    display: inline-block;
+    padding: .5em .5em;
+    border-radius: 40px;
+    background-color: #b32323;
+    letter-spacing: 1px;
+    transform: translateY(150px);
+    z-index: 999;
+}
+
+#btn h5 {
+    color:white;
+}
+ 
+
+#btn a:hover {
+    color: rgb(46, 80, 131);
+    background-color: white;
+    z-index: 200;
+}
+
+.bottom {
+    position: relative;
+    padding: 100px;
+    background: #133a85;
+}
+
+.bottom h2 {
+    font-size: 2.5em;
+    color: white;
+    margin-bottom: 0.5em;
+}
+
+.bottom p{
+    font-size: 1.5em;
     color:white;
 }
