--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,16 @@
     box-sizing: border-box;
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-shadow:0px 1px 2px rgba(0, 0, 0, 0.2);
+}
 
+a {
+    text-decoration: none;
+}
+
+a:visited{
+    text-decoration: none;
+    color:white;
 }
 
 body {
@@ -160,17 +169,14 @@ section img {
     letter-spacing: 1px;
     transform: translateY(50px);
     z-index: 999;
+    pointer-events:visible;
+    transition: .3s ease-out;
 }
 
-#btn h5 {
-    color:white;
-}
-
-
-#btn a:hover {
-    color: rgb(46, 80, 131);
-    background-color: white;
-    z-index: 200;
+#btn:hover {
+    transition: .4s ease-in;
+    background-color: black;
+    
 }
 
 .bottom {
